--- a/portfolio.html
+++ b/portfolio.html
@@ -14,17 +14,18 @@
 </head>
 
 <body>
-    <header class="top-section">
+    <header class="header-section">
         <div class="container container-flex">
             <nav class="navbar">
-                <a href="" class="nav-logo"><span class="nav-logo-colored">Web</span>Studio </a>
-                <ul class="navbar-item">
-                    <li class="nav-list">
-                        <a class="nav-link" href="./index.html">Студия</a></li>
-                    <li class="nav-list">
-                        <a class="nav-link current" href="./">Портфолио</a></li>
-                    <li class="nav-list">
-                        <a class="nav-link" href="./">Контакты</a></li>
+                <a href="#" class="navbar-logo"><span class="navbar-logo-colored">Web</span>Studio </a>
+                <ul class="navbar-list">
+                    <li class="navbar-item">
+                        <a class="navbar-link" href="./index.html">Студия</a></li>
+                    <li class="navbar-item">
+                        <a class="navbar-link current" href="./portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="navbar-item">
+                        <a class="navbar-link" href="./#">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="contacts">
@@ -33,7 +34,6 @@
                         <svg class="contact-svg-mail">
                           <use href="./image/sprite.svg#icon-mail"></use>
                         </svg> info@devstudio.com
-
                     </a>
                 </li>
                 <li class="contacts-list">
@@ -53,11 +53,11 @@
             <div class="container">
                 <h1 class="porfolio-title">Portfolio</h1>
                 <ul class="filter filter-flex">
-                    <li class="filter-item"><button type="button" class="ftr-button">Все</button></li>
-                    <li class="filter-item"><button type="button" class="ftr-button">Веб-сайты</button></li>
-                    <li class="filter-item"><button type="button" class="ftr-button">Приложения</button></li>
-                    <li class="filter-item"><button type="button" class="ftr-button">Дизайн</button></li>
-                    <li class="filter-item"><button type="button" class="ftr-button">Маркетинг</button></li>
+                    <li class="filter-item"><button type="button" class="filter-button">Все</button></li>
+                    <li class="filter-item"><button type="button" class="filter-button">Веб-сайты</button></li>
+                    <li class="filter-item"><button type="button" class="filter-button">Приложения</button></li>
+                    <li class="filter-item"><button type="button" class="filter-button">Дизайн</button></li>
+                    <li class="filter-item"><button type="button" class="filter-button">Маркетинг</button></li>
                 </ul>
                 <ul class="portfolio-list">
                     <li class=" portfolio-item">
@@ -68,7 +68,7 @@
                                     <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="portfolio-text-planting ">
+                            <div class="portfolio-text-box ">
                                 <h2 class="subtitle-portfolio ">Технокряк</h2>
                                 <p class="portfolio-text ">Веб-сайт</p>
                             </div>
@@ -82,7 +82,7 @@
                                     <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="portfolio-text-planting ">
+                            <div class="portfolio-text-box ">
                                 <h2 class="subtitle-portfolio ">Постер New Orlean vs Golden Star</h2>
                                 <p class="portfolio-text ">Дизайн</p>
                             </div>
@@ -96,7 +96,7 @@
                                     <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="portfolio-text-planting ">
+                            <div class="portfolio-text-box ">
                                 <h2 class="subtitle-portfolio ">Ресторан Seafood</h2>
                                 <p class="portfolio-text ">Маркетинг</p>
                             </div>
@@ -110,7 +110,7 @@
                                     <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="portfolio-text-planting ">
+                            <div class="portfolio-text-box ">
                                 <h2 class="subtitle-portfolio ">Проект Prime</h2>
                                 <p class="portfolio-text ">Приложения</p>
                             </div>
@@ -124,7 +124,7 @@
                                     <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="portfolio-text-planting ">
+                            <div class="portfolio-text-box ">
                                 <h2 class="subtitle-portfolio ">Проект Boxes</h2>
                                 <p class="portfolio-text ">Приложения</p>
                             </div>
@@ -138,7 +138,7 @@
                                     <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="portfolio-text-planting ">
+                            <div class="portfolio-text-box ">
                                 <h2 class="subtitle-portfolio ">Inspiration has no Borders</h2>
                                 <p class="portfolio-text ">Веб-сайт</p>
                             </div>
@@ -153,7 +153,7 @@
                                     <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="portfolio-text-planting ">
+                            <div class="portfolio-text-box ">
                                 <h2 class="subtitle-portfolio ">Издание Limited Edition</h2>
                                 <p class="portfolio-text ">Дизайн</p>
                             </div>
@@ -167,7 +167,7 @@
                                     <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="portfolio-text-planting ">
+                            <div class="portfolio-text-box ">
                                 <h2 class="subtitle-portfolio ">Проект LAB</h2>
                                 <p class="portfolio-text ">Маркетинг</p>
                             </div>
@@ -181,7 +181,7 @@
                                     <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
-                            <div class="portfolio-text-planting ">
+                            <div class="portfolio-text-box ">
                                 <h2 class="subtitle-portfolio ">Growing Business</h2>
                                 <p class="portfolio-text ">Приложения</p>
                             </div>
@@ -192,21 +192,21 @@
         </section>
     </main>
     <!--footer-->
-    <footer class="footer-custom ">
+    <footer class="footer ">
         <div class="container-footer">
             <div class="container-footer-contacts">
-                <a href=" " class="nav-logo-light "><span class="nav-logo-colored ">Web</span>Studio </a>
+                <a href=" " class="nav-logo-footer "><span class="navbar-logo-colored ">Web</span>Studio </a>
                 <ul class="contacts-list footer-list ">
-                    <li class="contat-item-light ">
-                        <p class="address-light ">г. Киев, пр-т Леси Украинки, 26</p>
+                    <li class="contat-item-footer ">
+                        <p class="address-footer ">г. Киев, пр-т Леси Украинки, 26</p>
                     </li>
-                    <li class="contat-item-light contact-margin ">
-                        <a class="contact-link-light " href="info@devstudio.com "> info@devstudio.com </a></li>
-                    <li class="contat-item-light">
-                        <a class="contact-link-light " href="+380961111111 "> +38 096 111 11 11</a></li>
+                    <li class="contat-item-footer ">
+                        <a class="contact-link-footer " href="info@devstudio.com "> info@devstudio.com </a></li>
+                    <li class="contat-item-footer">
+                        <a class="contact-link-footer " href="+380961111111 "> +38 096 111 11 11</a></li>
                 </ul>
             </div>
-            <div class="container-footer-subscribe">
+            <div class="container-footer-svg">
                 <h3 class="footer-title">Присоединяйтесь</h3>
                 <ul class="social-footer-list">
                     <li class="social-footer-item">
@@ -235,15 +235,15 @@
                     </li>
                 </ul>
             </div>
-            <div class="container-footer-svg">
+            <div class="container-footer-subscribe">
                 <h3 class="footer-title">Подпишитесь на рассылку</h3>
                 <form class="footer-form">
                     <label for=mail class="mail-label"></label>
                     <input class="footer-input" type="email" name="mail" placeholder="E-mail" id="email" autocomplete="on" />
                     <button type="button" class="btn-subscribe">Подписаться
-                        <svg class="btn-icon" width="24" height="24">
-                            <use href="./image/sprite.svg#icon-icon-send"></use>
-                        </svg></button>
+                    <svg class="button-icon" width="24" height="24">
+                        <use href="./image/sprite.svg#icon-icon-send"></use>
+                    </svg></button>
                 </form>
             </div>
         </div>
