--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <h3 class="footer-title">Подпишитесь на рассылку</h3>
                 <form class="footer-form">
                     <label for=mail class="mail-label"></label>
-                    <input class="footer-input" type="email" name="mail" placeholder="E-mail" id="email" autocomplete="on" />
+                    <input class="footer-input" type="email" name="mail" placeholder="E-mail" id="subscribe-email" autocomplete="on" />
                     <button type="button" class="btn-subscribe">Подписаться
                     <svg class="button-icon" width="24" height="24">
                         <use href="./image/sprite.svg#icon-icon-send"></use>
