--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <svg class="features__svg">
                           <use href="./image/sprite.svg#icon-clock-1"></use>
                       </svg></div>
-                        <h3 class="ffeatures__title">Пунктуальность</h3>
+                        <h3 class="features__title">Пунктуальность</h3>
                         <p class="features__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="features__item">
@@ -81,7 +81,7 @@
                             <svg class="features__svg">
                           <use href="./image/sprite.svg#icon-diagram-1"></use>
                       </svg></div>
-                        <h3 class="ffeatures__title">Планирование</h3>
+                        <h3 class="features__title">Планирование</h3>
                         <p class="features__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="features__item">
@@ -90,7 +90,7 @@
                              <use href="./image/sprite.svg#icon-astronaut-1"></use>
                             </svg>
                         </div>
-                        <h3 class="ffeatures__title">Современные технологии</h3>
+                        <h3 class="features__title">Современные технологии</h3>
                         <p class="features__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
