--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                 </ul>
             </nav>
             <ul class="contacts">
-                <li class="contacts__list">
+                <li class="contacts__item">
                     <a class="contacts__link" href="info@devstudio.com">
                         <svg class="contacts__icon" width="16" height="12">
                           <use href="./image/sprite.svg#icon-mail"></use>
                         </svg> info@devstudio.com
                     </a>
                 </li>
-                <li class="contsacts__list">
+                <li class="contacts__item">
                     <a class="contacts__link" href="+380961111111">
                         <svg class="contacts__icon" width="10" height="16">
                             <use href="./image/sprite.svg#icon-smartphone">
@@ -52,7 +52,7 @@
         <!--secctin1-->
         <section class="hero">
             <div class="container">
-                <h1 class="hero__titel">Эффективные решения для вашего бизнеса</h1>
+                <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
@@ -97,9 +97,9 @@
             </div>
         </section>
         <!--secctin3-->
-        <section class="section section__nopaddingtop">
+        <section class="section section--nopaddingtop">
             <div class="container">
-                <h2 class="section__titel">Чем мы занимаемся</h2>
+                <h2 class="section__title">Чем мы занимаемся</h2>
                 <ul class="work">
                     <li class="work__item"><img src=./image/box1.jpg alt="desctop" width=370>
                         <div class="box">
@@ -107,7 +107,7 @@
                         </div>
                     </li>
                     <li class="work__item"><img src=./image/box2.jpg alt="mobileapp" width=370>
-                        <div class="box">
+                        <div class="work__box">
                             <h3 class="work__title">мобильные приложения</h3>
                         </div>
                     </li>
@@ -120,36 +120,36 @@
             </div>
         </section>
         <!--secctin4-->
-        <section class="section section__background">
+        <section class="section section--background">
             <div class="container">
-                <h2 class="section__titel">Наша команда</h2>
+                <h2 class="section__title">Наша команда</h2>
                 <ul class="team">
                     <li class="team__item"><img src=./image/teamcard1.jpg alt="teammate" width=270>
-                        <div class="border__name">
+                        <div class="team__box">
                             <h3 class="team__title">Игорь Демьяненко</h3>
                             <p class="team__text">Product Designer</p>
-                            <ul class="team__socials">
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                            <ul class="socials">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-instagram-2"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-twitter-1"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-facebook-1"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-linkedin-1"></use>
                                     </svg></a>
                                 </li>
@@ -157,32 +157,32 @@
                         </div>
                     </li>
                     <li class="team__item"><img src=./image/teamcard2.jpg alt="teammate" width=270>
-                        <div class="border__name">
+                        <div class="team__box">
                             <h3 class="team__title">Ольга Репина</h3>
                             <p class="team__text">Frontend Developer</p>
 
                             <ul class="team__socials">
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-instagram-2"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-twitter-1"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-facebook-1"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-linkedin-1"></use>
                                     </svg></a>
                                 </li>
@@ -190,31 +190,31 @@
                         </div>
                     </li>
                     <li class="team__item"><img src=./image/teamcard3.jpg alt="teammate" width=270>
-                        <div class="border__name">
+                        <div class="team__box">
                             <h3 class="team__title">Николай Тарасов</h3>
                             <p class="team__text">Marketing</p>
                             <ul class="team__socials">
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-instagram-2"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-twitter-1"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-facebook-1"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-linkedin-1"></use>
                                     </svg></a>
                                 </li>
@@ -222,31 +222,31 @@
                         </div>
                     </li>
                     <li class="team__item"><img src=./image/teamcard4.jpg alt="teammate" width=270>
-                        <div class="border__name">
+                        <div class="team__box">
                             <h3 class="team__title">Михаил Ермаков</h3>
                             <p class="team__text">UI Designer</p>
                             <ul class="team__socials">
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-instagram-2"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-twitter-1"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-facebook-1"></use>
                                     </svg></a>
                                 </li>
-                                <li class="team__socials--item">
-                                    <a class="team__socials--link" href="#">
-                                        <svg class="team__socials--icon">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <svg class="socials__icon">
                                     <use href="./image/sprite.svg#icon-linkedin-1"></use>
                                     </svg></a>
                                 </li>
@@ -259,7 +259,7 @@
         </section>
         <section class="section">
             <div class="container">
-                <h2 class="section__titel">Постоянные клиенты</h2>
+                <h2 class="section__title">Постоянные клиенты</h2>
                 <ul class="clients">
                     <li class="clients__item"><a class="clients__link" href="#"><svg class="clients__icon">
                              <use href="./image/sprite.svg#icon-Logo-1"></use>
@@ -343,41 +343,41 @@
 
 
     </footer>
-    <div class=" window window__is--hidden " data-modal>
-        <div class="window__modal "><button type="button " class="window__modal--button " data-modal-close>
-            <svg class="window__close--icon ">
+    <div class=" window " data-modal>
+        <div class="window__modal "><button type="button " class="window__modal-button " data-modal-close>
+            <svg class="window__close-icon ">
             <use href="./image/closebtn.svg#icon-closebtn "></use></svg></button>
-            <h2 class="window__titel">Оставьте свои данные, мы вам перезвоним</h2>
-            <form>
+            <h2 class="window__title">Оставьте свои данные, мы вам перезвоним</h2>
+            <form class="window__form">
                 <div class="window__fild">
-                    <label class="window__fild--item" for="name">Имя</label>
+                    <label class="window__fild-item" for="name">Имя</label>
                     <input type="text" class="window__input" name="name" id="name" autofocus/>
                     <svg class="window__icons" width="12" height="12">
                         <use href="./image/sprite.svg#icon-person-black"></use>
                     </svg>
                 </div>
                 <div class="window__fild">
-                    <label class="window__fild--item" for="tel">Телефон</label>
+                    <label class="window__fild-item" for="tel">Телефон</label>
                     <input type="tel" class="window__input" name="tel" id="tel" placeholder=" " />
                     <svg class="window__icons" width="13" height="13">
                         <use href="./image/sprite.svg#icon-phone-black"></use>
                     </svg>
                 </div>
                 <div class="window__fild">
-                    <label class="window__fild--item" for="email">Почта</label>
+                    <label class="window__fild-item" for="email">Почта</label>
                     <input type="email" class="window__input" name="email" id="email" placeholder=" " />
                     <svg class="window__icons" width="15" height="12">
                         <use href="./image/sprite.svg#icon-email-black"></use>
                     </svg>
                 </div>
                 <div class="window__fild">
-                    <label class="window__fild--item" for="text">Комментарий</label>
+                    <label class="window__fild-item" for="text">Комментарий</label>
                     <textarea class="window__input window__coment" name="text" id="text" placeholder="Введите текст"></textarea>
                 </div>
 
                 <label class="window__checkbox" for="check">
-                        <input class="window__checkbox--input" type="checkbox" name="checkbox" id="check" />
-                    <span class="window__checkbox--border"><svg class="window__checkbox--icon" width="15" height="12">
+                        <input class="window__checkbox-input" type="checkbox" name="checkbox" id="check" />
+                    <span class="window__checkbox-border"><svg class="window__checkbox-icon" width="15" height="12">
                         <use href="./image/sprite.svg#icon-Vector"></use>
                     </svg></span>
                 <span class="window__text">Соглашаюсь с рассылкой и принимаю<a class="window__link" href="#">Условия договора</a></span>
