--- a/portfolio.html
+++ b/portfolio.html
@@ -30,14 +30,14 @@
                 </ul>
             </nav>
             <ul class="contacts">
-                <li class="contacts__list">
+                <li class="contacts__item">
                     <a class="contacts__link" href="info@devstudio.com">
                         <svg class="contacts__icon" width="16" height="12">
                           <use href="./image/sprite.svg#icon-mail"></use>
                         </svg> info@devstudio.com
                     </a>
                 </li>
-                <li class="contsacts__list">
+                <li class="contacts__item">
                     <a class="contacts__link" href="+380961111111">
                         <svg class="contacts__icon" width="10" height="16">
                             <use href="./image/sprite.svg#icon-smartphone">
@@ -66,7 +66,7 @@
                             <div class="portfolio__box">
                                 <img src=./image/img1.jpg alt="picture " width=370>
                                 <div class="portfolio__overlay">
-                                    <p class="portfolio__overlay--text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
                             <div class="portfolio__borders">
@@ -80,7 +80,7 @@
                             <div class="portfolio__box">
                                 <img src=./image/img2.jpg alt="picture " width=370>
                                 <div class="portfolio__overlay">
-                                    <p class="portfolio__overlay--text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
                             <div class="portfolio__borders ">
@@ -94,7 +94,7 @@
                             <div class="portfolio__box">
                                 <img src=./image/img3.jpg alt="picture " width=370>
                                 <div class="portfolio__overlay">
-                                    <p class="portfolio__overlay--text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
                             <div class="portfolio__borders ">
@@ -108,7 +108,7 @@
                             <div class="portfolio__box">
                                 <img src=./image/img4.jpg alt="picture " width=370>
                                 <div class="portfolio__overlay">
-                                    <p class="portfolio__overlay--text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
                             <div class="portfolio__borders ">
@@ -122,7 +122,7 @@
                             <div class="portfolio__box">
                                 <img src=./image/img5.jpg alt="picture " width=370>
                                 <div class="portfolio__overlay">
-                                    <p class="portfolio__overlay--text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
                             <div class="portfolio__borders ">
@@ -136,7 +136,7 @@
                             <div class="portfolio__box">
                                 <img src=./image/img6.jpg alt="picture " width=370>
                                 <div class="portfolio__overlay">
-                                    <p class="portfolio__overlay--text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
                             <div class="portfolio__borders ">
@@ -151,7 +151,7 @@
                             <div class="portfolio__box">
                                 <img src=./image/img7.jpg alt="picture " width=370>
                                 <div class="portfolio__overlay">
-                                    <p class="portfolio__overlay--text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
                             <div class="portfolio__borders ">
@@ -165,7 +165,7 @@
                             <div class="portfolio__box">
                                 <img src=./image/img8.jpg alt="picture " width=370>
                                 <div class="portfolio__overlay">
-                                    <p class="portfolio__overlay--text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
                             <div class="portfolio__borders ">
@@ -179,7 +179,7 @@
                             <div class="portfolio__box">
                                 <img src=./image/img9.jpg alt="picture " width=370>
                                 <div class="portfolio__overlay">
-                                    <p class="portfolio__overlay--text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
                             <div class="portfolio__borders ">
